created separate claims upload endpoints
